<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:padding="20dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_calculator"
            android:textSize="40dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:fontFamily="sans-serif"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio">

            <RadioButton
                android:id="@+id/btn_girl"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/perempuan"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/btn_boy"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/laki_laki"
                android:textColor="@color/white"
                />
        </RadioGroup>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:src="@drawable/woman"
                android:layout_alignParentLeft="true"
                />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:src="@drawable/man"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berat_badan"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:fontFamily="sans-serif"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/inp_berat"
                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/kg_contoh_50"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:layout_marginLeft="10dp"
                 android:id="@+id/tv_h"
                 />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_badan"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:fontFamily="sans-serif"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/inp_tinggi"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meter_contoh_1_6"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/calculate"
            android:background="#3D5A80"
            android:id="@+id/btn_calculate"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/standar_bmi"
            android:background="#3D5A80"
            android:id="@+id/btn_standar"
            />
    </LinearLayout>


</ScrollView>